<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.atriox.guia1_moviles.Principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/TxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textAlignment="textEnd"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TxtOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textAlignment="textEnd"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/BtnAC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnAC"/>

                <Button
                    android:id="@+id/BtnSiete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnSiete"/>

                <Button
                    android:id="@+id/BtnCuatro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnCuatro"/>

                <Button
                    android:id="@+id/BtnUno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnUno"/>

                <Button
                    android:id="@+id/BtnCero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnCero"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/BtnDEL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnDEL"/>

                <Button
                    android:id="@+id/BtnOcho"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnOcho"/>

                <Button
                    android:id="@+id/BtnCinco"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnCinco"/>

                <Button
                    android:id="@+id/BtnDos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnDos"/>

                <Button
                    android:id="@+id/BtnPunto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnDot"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/BtnDivision"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnEntre"/>

                <Button
                    android:id="@+id/BtnNueve"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnNueve"/>

                <Button
                    android:id="@+id/BtnSeis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnSeis"/>

                <Button
                    android:id="@+id/BtnTres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnTres"/>

                <Button
                    android:id="@+id/BtnANS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnANS"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/BtnMultiplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnMult"/>

                <Button
                    android:id="@+id/BtnResta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnMenos"/>

                <Button
                    android:id="@+id/BtnSuma"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/BtnMas"/>

                <Button
                    android:id="@+id/BtnIgual"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:text="@string/BtnIgual"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
